alephbeth/istio/aleph-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aleph
  namespace: staging
spec:
  hosts:
  - aleph
  http:
  - route:
    - destination:
        host: aleph.staging.svc.cluster.local
        port:
          number: 80
