alephbeth/istio/beth-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beth
  namespace: staging
spec:
  hosts:
  - beth
  http:
  - route:
    - destination:
        host: beth.staging.svc.cluster.local
        port:
          number: 80
