alephbeth/istio/front-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
  namespace: staging
spec:
  hosts:
  - front
  http:
  - route:
    - destination:
        host: front.staging.svc.cluster.local
        port:
          number: 80
